# schoolsim

./: LICENSE  profile_sim.py  pyproject.toml
.github/workflows/: ci.yml
src/schoolsim/: __init__.py  cli.py  forces.py  forces_numba.py  initializer.py  integration.py  predator.py  recorder.py  school.py  simulation.py  visualization.py
test/schoolsim/: test_force_perf.py  test_forces.py  test_forces_props.py  test_integration.py  test_predator.py
