[project]
name = "schoolsim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Baptiste Lafoux", email = "baptiste.lafoux@dice-engineering.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "numba>=0.60",
    "numpy>=2.0,<2.3",
    "scipy>=1.14",
    "tqdm>=4.67.1",
    "xarray>=2024.10.0",
]

[project.scripts]
ssim = "schoolsim.cli:ssim"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]

[tool.pyright]
pythonPlatform = "Linux"
venvPath = "."
venv = ".venv"
extraPaths = ["src"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "scipy-stubs>=1.17.0.0",
    "types-tqdm>=4.67.0.20250809",
]
