[project]
name = "schoolsim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Baptiste Lafoux", email = "baptiste.lafoux@dice-engineering.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.0",
    "numpy>=2.4.0",
    "xarray>=2025.12.0",
    "matplotlib>=3.10.0",
    "tqdm>=4.67.0",
]

[project.scripts]
ssim = "schoolsim.cli:ssim"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
pythonPlatform = "Linux"
venvPath = "."
venv = ".venv"
extraPaths = ["src"]

[dependency-groups]
dev = [
    "matplotlib-stubs>=0.3.11",
    "pytest>=9.0.2",
]
